
@startuml Core

package View {
	class AudioPlayer <<MonoBehaviour>>
	class NotesViewer <<MonoBehaviour>>
}

package Presenter {
	class InputObserver <<MonoBehaviour>>
}

package Model {
	class SessionManager

	class ReactiveReferee
	class RealtimeReferee
}

SessionManager <-x AudioPlayer : UpdateTime

SessionManager <--x ReactiveReferee : SetNoteStatus

SessionManager <.. RealtimeReferee : OnTimeUpdated
SessionManager <--x RealtimeReferee : SetNoteStatus

ReactiveReferee <--x InputObserver : Input

SessionManager <... NotesViewer : OnNotesChanged, OnTimeUpdated

@enduml
